--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="text">
                 <h1>Séries</h1>
                 <p>Cadastre suas séries!!!</p>
+                <p>Commit de igor aqui.</p>
             </div>
             <button>Comece-Já</button>
         </div>
