--- a/index.html
+++ b/index.html
@@ -18,5 +18,33 @@
         </div>
          <img src="imagens/starwars.jpg" alt="">
     </div>
+    <div class="cards">
+        <div class="action card">
+            <div class="texto">
+                <h2>Ação</h2>
+            </div>
+        </div>
+        <div class="scifi card">
+            <div class="texto">
+                <h2>Sci-Fi</h2>
+            </div>
+        </div>
+        <div class="animation card">
+            <div class="texto">
+                <h2>Animação</h2>
+            </div>
+        </div>
+
+        <div class="drama card">
+            <div class="texto">
+                <h2>Animação</h2>
+            </div>
+        </div>
+        <div class="animation card">
+            <div class="texto">
+                <h2>Animação</h2>
+            </div>
+        </div>
+    </div>
 </body> 
 </html>
