--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
 
         <div class="drama card">
             <div class="texto">
-                <h2>Animação</h2>
+                <h2>Drama</h2>
             </div>
         </div>
-        <div class="animation card">
+        <div class="kids card">
             <div class="texto">
-                <h2>Animação</h2>
+                <h2>Infantil</h2>
+            </div>
+        </div>
+        <div class="anime card">
+            <div class="texto">
+                <h2>Anime</h2>
             </div>
         </div>
     </div>
