new images, and class, and exchange of some images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <h2>Animação</h2>
             </div>
         </div>
-
         <div class="drama card">
             <div class="texto">
                 <h2>Drama</h2>
@@ -45,9 +44,24 @@
                 <h2>Infantil</h2>
             </div>
         </div>
+        <div class="suspense card">
+            <div class="texto">
+                <h2>Suspense</h2>
+            </div>
+        </div>
+        <div class="comedy card">
+            <div class="texto">
+                <h2>Comédia</h2>
+            </div>
+        </div>
         <div class="anime card">
             <div class="texto">
                 <h2>Anime</h2>
+            </div>
+        </div>
+        <div class="fantasy card">
+            <div class="texto">
+                <h2>Fantasia</h2>
             </div>
         </div>
     </div>
